test/fail/import-main-in-migration/migration.mo
import Main "../import-main-in-migration";

module {
  public func run({}) : Main.Type { {} }
}